-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 9
-
Component/s: hotspot
-
b33
-
linux
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8375191 | openjdk8u492 | Antonio Vieiro | P4 | Resolved | Fixed | b01 |
| JDK-8083410 | emb-9 | Mikael Gerdin | P4 | Resolved | Fixed | b33 |
Clang is a little bit more picky with the "format string not literal" warning.
Fix the few remaining places to allow clang++ as an alternate compiler with some more helpful error messages.
Fix the few remaining places to allow clang++ as an alternate compiler with some more helpful error messages.
- backported by
-
JDK-8083410 Hotspot does not compile with clang 3.4 on Linux
-
- Resolved
-
-
JDK-8375191 Hotspot does not compile with clang 3.4 on Linux
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk8u-dev/59f54ca2
-
Review(master)
openjdk/jdk8u-dev/736