8056039: Hotspot does not compile with clang 3.4 on Linux

Reviewed-by: brutisso, sla